# xiaomicup

./: README.md  track1_motion_program_style.py
cyberdog_ws/src/bes_transmit/: CMakeLists.txt  package.xml
cyberdog_ws/src/bes_transmit/include/: back_end_http.hpp  back_end_publisher.hpp  bes_transmit_center.hpp  check_connection.hpp
cyberdog_ws/src/bes_transmit/include/file_uploading/: file_uploading.h  lcm_log_uploader.hpp
cyberdog_ws/src/bes_transmit/src/: bes_transmit_center.cpp  file_uploading.cpp  lcm_log_uploader.cpp
cyberdog_ws/src/cyberdog_ws/cyberdog_bringup/: README.md
cyberdog_ws/src/motion/motion_manager/: CMakeLists.txt  package.xml
cyberdog_ws/src/motion/motion_manager/include/motion_manager/: motion_handler.hpp
cyberdog_ws/src/motion/motion_manager/src/: motion_handler.cpp
src/cyberdog_locomotion/common/config/: cyberdog2-ctrl-user-parameters.yaml
src/cyberdog_locomotion/scripts/: run_competition.py  track1_motion_program_style.py  track1_stone_path.py  track3_curve_follow.py  yellow_borde_debug.py
src/cyberdog_simulator/cyberdog_gazebo/launch/: gazebo.launch.py  race_gazebo.launch.py
src/cyberdog_simulator/cyberdog_gazebo/media/materials/scripts/: gazebo.material
src/cyberdog_simulator/cyberdog_gazebo/model/race2024_meshes/: bridge_08.stl  decelezone_04.stl  highstairs_07.stl  round_05.stl  shortstairs_09.stl  slope_03.stl  stairs_06.stl  stoneboard_10.stl  stoneroad_02.stl  stoneroad_02_collision.stl  wall_00.stl
src/cyberdog_simulator/cyberdog_gazebo/model/race2025_meshes/: Aarea_wall_00.stl  Barea_rod_03.stl  Barea_slope_04.stl  Barea_stoneroad_05.stl  Barea_wall_02.stl  QR_code_A1_07.stl  QR_code_B1_08.stl  arrow_broad_06.stl  light_broad_09.stl  s_curve_01.stl
src/cyberdog_simulator/cyberdog_gazebo/model/race2026_meshes/: 1_border.stl  1_rockroad.stl  2_bar1.stl  2_bar2.stl  2_border.stl  2_bridge.stl  2_coke.stl  2_goal.stl  2_obstacle.stl  3_border.stl  3_football.stl  3_slope.stl
src/cyberdog_simulator/cyberdog_gazebo/script/: launchgazebo.sh  launchsim.py
src/cyberdog_simulator/cyberdog_gazebo/world/: .race.swp  .race.world.swp  race.world  race2024.world  race2025.world  simple.world
src/cyberdog_simulator/cyberdog_robot/cyberdog_description/xacro/: gazebo.xacro  leg.xacro
src/race/: race_controller.py  robot_control_cmd_lcmt.py
src/tools/step_height_controller/: README.md  config.yaml  send_step_cmd.py  step_height_controller.py
src/wild_glint_hunt/: .gitignore
src/wild_glint_hunt/wild_glint_hunt/: CMakeLists.txt  README.md  package.xml
src/wild_glint_hunt/wild_glint_hunt/config/: bringup_nodes.yaml  bringup_params.yaml  competition_tuned_params.yaml  game_field_map.yaml  official_topics.yaml  params.yaml  real_hardware_topics.yaml
src/wild_glint_hunt/wild_glint_hunt/include/wild_glint_hunt/: path_planner.hpp  robot_interface.hpp  state_machine.hpp  vision_processor.hpp
src/wild_glint_hunt/wild_glint_hunt/launch/: integration_real.launch.py  official_integration.launch.py  sim_wild_glint_hunt.launch.py  wild_glint_hunt.launch.py
src/wild_glint_hunt/wild_glint_hunt/msg/: VisionBall.msg  VisionBallArray.msg
src/wild_glint_hunt/wild_glint_hunt/src/: check_camera_topic.cpp  path_planner_node.cpp  reset_robot_pose.cpp  robot_interface_real.cpp  robot_interface_sim.cpp  simulated_sensors_node.cpp  state_machine_node.cpp  vision_node.cpp
src/wild_glint_hunt/wild_glint_hunt_docs_archive/: DEBUG_GUIDE.md  DEVELOPMENT_MEMO.md  HARD_CODE_SCAN.md  OFFICIAL_CYBERDOG_ROS2_SCAN.md  ROUTE_STRATEGY.md  SENSOR_CONNECTIVITY.md  SIMULATION_GUIDE.md  SIM_TOPIC_FLOW.md
